[FIX] popup box to select visible calendars shown underneath events details (using fullcalendar) - https://dev.tiki.org/item5904
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/15.x@58326 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/feature_css/calendar.css
+++ b/themes/base_files/feature_css/calendar.css
@@ -94,7 +94,7 @@
 
 #filtercal {
 	position: absolute;
-	z-index: 2 !important;
+	z-index: 9 !important;
 	right: 190px;
 }
 
